--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Novelists, American -- 19th century -- Correspondence'
 - !lcsh 'Hawthorne, Nathaniel, 1804-1864 -- Correspondence'
 - !lcsh 'Hawthorne, Sophia Peabody, 1809-1871 -- Correspondence'
+- GITenberg
 title: Love Letters of Nathaniel Hawthorne, Volume 2 (of 2)
 url: http://www.gutenberg.org/ebooks/41368
